2006-02-09 Daniel Perez <daniel@gforgegroup.com>
	* User.class now deletes from filemodule_monitor, forum_monitored_forum, artifact_monitor, artifact_type_monitor when
		deleting user

2006-02-08 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Patched DocsSearchQuery FTI SQL
		https://gforge.org/tracker/index.php?func=detail&aid=1849&group_id=6&atid=222
	* Applied patch :  Patched ExportProjectSearch FTI query
		https://gforge.org/tracker/index.php?func=detail&aid=1851&group_id=6&atid=222
	* Applied patch :  forums_search function ordering not results
		https://gforge.org/tracker/index.php?func=detail&aid=1853&group_id=6&atid=222
	* Applied patch : NewsSearchQuery not ordering results
		https://gforge.org/tracker/index.php?func=detail&aid=1855&group_id=6&atid=222
	* Applied patch :  TasksSearchQuery.class and project_task_search() function problems
		https://gforge.org/tracker/index.php?func=detail&aid=1858&group_id=6&atid=222
	* Applied patch : skills_data_search(text) postgresql function not returning results ordered by rank value
		https://gforge.org/tracker/index.php?func=detail&aid=1857&group_id=6&atid=222
	* Applied patch : forum_search(text, integer) function not ordering results
		https://gforge.org/tracker/index.php?func=detail&aid=1852&group_id=6&atid=222


2006-02-03 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch :  magic quotes and search terms
		http://gforge.org/tracker/?func=detail&aid=1839&group_id=6&atid=222
	* Fixed bug : FTI search with exact match doesn't work
		http://gforge.org/tracker/?func=detail&aid=1844&group_id=6&atid=222		

2006-02-01 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Chinese language updated
		http://gforge.org/tracker/?func=detail&aid=1755&group_id=1&atid=106
	* Applied patch : MailParser.class is too restrictive
		http://gforge.org/tracker/?func=detail&aid=1819&group_id=1&atid=106
	* Applied patch : cvs-2.12's commitid causes cvsweb to corrupt content behind "download" links