@@ -1,3 +1,9 @@
+
+2006-02-11 Tim Perdue	<tim@gforgegroup.com>
+
+	* Added priority column to tracker and made its background the priority color.
+	the rest of the row is now standard alternating color for accessibility reasons.
+
 2006-02-09 Daniel Perez <daniel@gforgegroup.com>
 	* User.class now deletes from filemodule_monitor, forum_monitored_forum, artifact_monitor, artifact_type_monitor when
 		deleting user
@@ -46,6 +52,7 @@
 	* added google-style page counts at the bottom of the tracker browse page
 	so you can easily jump to specific pages
 	* Added multiple-file upload capability.
+	* Fixed full-text indexing
 
 2006-01-06 Daniel Perez <daniel@gforgegroup.com>
 	* Applied patch : When Anonymous posting is turned off, tell people to log in.
